WIP: Upgrading to Spring Boot 2.4